# serializer version: 1
# name: test_index_down
  dict({
    'exit_code': 0,
    'stderr': '''
      Stopping server with pid [PID]...
      Stopped server!
  
    ''',
    'stdout': '',
  })
# ---
# name: test_index_down_no_server_found
  dict({
    'exit_code': 1,
    'stderr': '''
      No server detected!
  
    ''',
    'stdout': '',
  })
# ---
# name: test_index_down_server_stopped
  dict({
    'exit_code': 1,
    'stderr': '''
      Server looks shutdown already.
  
    ''',
    'stdout': '',
  })
# ---
# name: test_index_up_background
  dict({
    'exit_code': 0,
    'stderr': '''
      Starting local index with PyPI fallback at http://localhost:3141
      Writing server logs to [PWD]/.packse/server.log
      Serving distributions from ./dist
      Running in background with pid [PID]
      Stop index server with `packse index down`.
  
    ''',
    'stdout': '''
      http://localhost:3141
  
    ''',
  })
# ---
# name: test_index_up_foreground
  dict({
    'exit_code': '<stopped>',
    'stderr': '''
      Starting local index with PyPI fallback at http://localhost:3141
      Serving distributions from ./dist
      Hiding server output, use `-v` to stream server logs
      Ready! [Stop with Ctrl-C]
      Interrupted!
  
    ''',
    'stdout': '',
  })
# ---
